--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Color Variables
-$primary-color: #41228e;
+$primary-color: #0e0a69;
+// $primary-color: #41228e;
 $secondary-color: #2bfdff;
 $text-color: #4c4c4c;
 $text-color-dark: #000;
