--- a/_includes/experience-section.html
+++ b/_includes/experience-section.html
@@ -8,7 +8,12 @@
       </div>
       {% for experience in site.data.settings.experience %}
       <div class="col-lg-3 col-md-4 text-center">
-        <img src="{{ site.baseurl }}/assets/images/experience/{{ experience.icon }}" alt="{{ site.data.settings.experience-title }} icon">
+        <img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+              } 
+             src="{{ site.baseurl }}/assets/images/experience/{{ experience.icon }}" alt="{{ site.data.settings.experience-title }} icon">
         <p class="mb-0">{{ experience.date }}</p>
         <h4>{{ experience.name }}</h4>
         <h6 class="text-light">{{ experience.organization }}</h6>
