--- a/_includes/experience-section.html
+++ b/_includes/experience-section.html
@@ -10,7 +10,7 @@
       <div class="col-lg-3 col-md-4 text-center">
         <img {
                 width: 100%;
-                height: 100%;
+                height: auto;
                 object-fit: contain;
               } 
              src="{{ site.baseurl }}/assets/images/experience/{{ experience.icon }}" alt="{{ site.data.settings.experience-title }} icon">
