--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -17,8 +17,6 @@
     @include clearfix;
     padding: 1em 1em 1em;
     font-family: $sans-serif-narrow;
-    color: #fff;
-    background-color: $northwestern-color;
     @include breakpoint($x-large) {
       max-width: $x-large;
     }
@@ -28,6 +26,8 @@
     }
 
     a {
+      color: white;
+      background-color: $northwestern-color;
       text-decoration: none;
     }
   }
