--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -16,6 +16,7 @@
     @include container;
     @include clearfix;
     padding: 1em 1em 1em;
+    background-color: $northwestern-color;
     font-family: $sans-serif-narrow;
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -35,6 +36,7 @@
   background-color: $northwestern-color;
   ul {
     background-color: $northwestern-color;
+    color: white;
     margin: 0;
     padding: 0;
     clear: both;
@@ -50,6 +52,7 @@
   color: white;
 
   &--lg {
+    background-color: $northwestern-color;
     padding-right: 2em;
     font-weight: 700;
   }
