--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
 .masthead {
   position: relative;
   background-color: $northwestern-color;
-  border-bottom: 1px solid $border-color;
+  border-bottom: 0px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.15s;
@@ -24,10 +24,12 @@
 
     nav {
       z-index: 10;
+      background-color: $northwestern-color;
     }
 
     a {
       text-decoration: none;
+      background-color: $northwestern-color;
     }
   }
 }
