--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -126,7 +126,7 @@
     animation-delay: 0.25s;
 
     a {
-      color: #fff;
+      color: $northwestern-color;
     }
 
     .wrapper {
@@ -142,7 +142,7 @@
     .page__meta,
     .page__lead,
     .btn {
-      color: #fff;
+      color: $northwestern-color;
       text-shadow: 1px 1px 4px rgba(#000, 0.5);
     }
 
