--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,7 @@ body {
   padding-bottom: 9em;
   color: $text-color;
   font-family: $global-font-family;
+  font-weight: 300;
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -25,7 +26,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 h1 {
