--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,7 +13,7 @@ body {
   padding-bottom: 9em;
   color: $text-color;
   font-family: $global-font-family;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -25,32 +25,37 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
-  font-family: $header-font-family;
   font-weight: 600;
 }
 
 h1 {
   margin-top: 0;
+  font-family: $page-title-font-family;
   font-size: $type-size-3;
 }
 
 h2 {
+  font-family: $header-font-family;
   font-size: $type-size-4;
 }
 
 h3 {
+  font-family: $header-font-family;
   font-size: $type-size-5;
 }
 
 h4 {
+  font-family: $header-font-family;
   font-size: $type-size-6;
 }
 
 h5 {
+  font-family: $header-font-family;
   font-size: $type-size-6;
 }
 
 h6 {
+  font-family: $header-font-family;
   font-size: $type-size-6;
 }
 
