--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,7 @@
    ========================================================================== */
 
 /* Import Relevant Font from Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Baskervville&family=Libre+Baskerville:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Libre+Baskerville:ital@1&family=Noto+Sans+Mono&display=swap');
 
 $doc-font-size              : 16;
 
@@ -17,15 +17,14 @@ $indent-var                 : 1.3em;
 
 /* system typefaces */
 $serif                      : "Libre Baskerville", serif;
-$sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
-$monospace                  : Monaco, Consolas, "Lucida Console", monospace;
+$sans-serif                 : Inter, sans-serif;
+$monospace                  : "Noto Sans Mono", monospace;
 
 /* sans serif typefaces */
 $sans-serif-narrow          : $sans-serif;
 $helvetica                  : "Helvetica Neue", Arial, sans-serif;
 
 /* serif typefaces */
-$baskerville                : Baskerville, serif;
 $georgia                    : Georgia, serif;
 $times                      : Times, serif;
 $bodoni                     : "Bodoni MT", serif;
