--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,8 +7,7 @@
    ========================================================================== */
 
 /* Import Relevant Font from Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Libre+Baskerville:ital@1&family=Noto+Sans+Mono&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Libre+Baskerville:ital@1&family=Noto+Sans+Mono&display=swap');
 $doc-font-size              : 16;
 
 /* paragraph indention */
