--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,8 @@
    ========================================================================== */
 
 /* Import Relevant Font from Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,500&family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Mono&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Baskervville:ital@1&family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans+Mono&display=swap');
 $doc-font-size              : 16;
 
 /* paragraph indention */
@@ -15,7 +16,7 @@ $paragraph-indent           : false; // true, false (default)
 $indent-var                 : 1.3em;
 
 /* system typefaces */
-$serif                      : "Cormorant", serif;
+$serif                      : "Baskervville", serif;
 $sans-serif                 : Inter, sans-serif;
 $monospace                  : "Noto Sans Mono", monospace;
 
